fuck it — we're using jquery for touch events

--- a/_includes/nm/nm-header.html
+++ b/_includes/nm/nm-header.html
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <div class="menu-toggle" id="menu-toggle">
+    <div class="settings-toggle" id="settings-toggle">
       <div class="toggle-container">
         <span></span>
         <span></span>
