updating menu styles and button interactions

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,15 +54,14 @@
     <input type="text" class="search-input" id="search-input" placeholder="search recipes...">
 
     <div class="search-toggle" id="search-toggle">
-
-      <div class="close-container">
+      <div class="icon-container">
         <span></span>
         <span></span>
       </div>
     </div>
 
     <div class="settings-toggle" id="settings-toggle">
-      <div class="toggle-container">
+      <div class="icon-container">
         <span></span>
         <span></span>
         <span></span>
