--- a/_sass/imports/_colors.scss
+++ b/_sass/imports/_colors.scss
@@ -1,7 +1,7 @@
 //
 // Color Variables
 //
-:root {  
+:root {
   --clear: transparent;
 
   --white: #ffffff;
@@ -11,6 +11,7 @@
   --medblack: #37474F;
   --black: #263238;
   --ultrablack: #151B1D;
+  --true-black: #000000;
 
   --red: #FF1744;
   --aqua: #1DE9B6;
