--- a/_includes/nm/nm-header.html
+++ b/_includes/nm/nm-header.html
@@ -53,15 +53,15 @@
 
     <input type="text" class="search-input" id="search-input" placeholder="search recipes...">
 
-    <div class="search-toggle search-icon" id="search-toggle">
-      <div class="close-container">
+    <div class="search-toggle" id="search-toggle">
+      <div class="icon-container">
         <span></span>
         <span></span>
       </div>
     </div>
 
     <div class="settings-toggle" id="settings-toggle">
-      <div class="toggle-container">
+      <div class="icon-container">
         <span></span>
         <span></span>
         <span></span>
