--- a/_includes/settings-modal.html
+++ b/_includes/settings-modal.html
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="setting" id="">
+  <!-- <div class="setting" id="">
     <span>Notifications</span>
 
     <div class="toggle-container">
@@ -24,6 +24,6 @@
     <div class="toggle-container">
       <span></span>
     </div>
-  </div>
+  </div> -->
 
 </div>
