--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,7 +45,7 @@ body {
 input {
   border-radius: 0;
 }
-.open-nav,
+.open-settings,
 .searching {
   height: 100%;
   overflow: hidden;
@@ -159,9 +159,10 @@ header.site-header {
   padding: 0px;
   overflow: hidden;
 }
-.toggle-container {
+.settings-toggle .icon-container {
   height: 22px;
   width: 30px;
+  position: relative;
 
   display: flex;
   flex-direction: column;
@@ -174,6 +175,26 @@ header.site-header {
   height: 3px;
   width: 22px;
   margin: 2px 0;
+}
+.open-settings .settings-toggle .icon-container span {
+  width: 26px;
+
+  position: absolute;
+  top: 7px;
+}
+.open-settings .settings-toggle .icon-container {
+  @include rotate(45deg);
+}
+.open-settings .settings-toggle span:nth-child(2) {
+  display: none;
+}
+.open-settings .settings-toggle span:first-child {
+  // top: 7px;
+
+  @include rotate(90deg);
+}
+.open-settings .settings-toggle span:last-child {
+  // display: none;
 }
 nav.site-nav {
   overflow: hidden;
@@ -256,15 +277,53 @@ nav.site-nav {
     padding: 0px 20px 0px 30px;
   }
 }
-.open-nav .settings-modal {
+.open-settings .settings-modal {
   opacity: 1;
   pointer-events: all;
-  padding: 20px 20px 20px 30px;
+  padding: 20px 40px;
 
   right: 0;
 }
+.setting {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
 
+  cursor: pointer;
+  width: 180px;
+  padding: 5px 0;
+}
+.toggle-container {
+  height: 20px;
+  width: 40px;
+  background: var(--medgrey);
+  border-radius: 40px;
+  position: relative;
 
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  @include transition(all 125ms ease-in-out);
+}
+.setting:hover .toggle-container {
+  background: var(--darkgrey);
+}
+.toggle-container span {
+  height: 14px;
+  width: 14px;
+  display: block;
+  background: var(--white);
+  border-radius: 20px;
+
+  position: absolute;
+  left: 4px;
+
+  @include transition(all 125ms ease-in-out);
+  @include box-shadow(0px 2px 5px var(--black-op-25));
+}
 
 
 //
@@ -463,21 +522,15 @@ nav.site-nav {
     // top: 15px;
   }
 }
-.close-container {
+.search-toggle .icon-container {
   height: 26px;
   width: 26px;
   margin: 10px;
-  // pointer-events: none;
 
   @include rotate(45deg);
   @include transition(all 75ms ease-in-out);
 }
-.searching .close-container {
-  // pointer-events: all;
-
-  // @include rotate(135deg);
-}
-.close-container span {
+.search-toggle .icon-container span {
   height: 3px;
   width: 26px;
   background: var(--white);
@@ -489,26 +542,47 @@ nav.site-nav {
 
   @include rotate(90deg);
 }
-.close-container span:last-child {
+.search-toggle .icon-container span:first-child {
+  height: 12px;
+  width: 12px;
+  background: transparent;
+  border: 3px solid white;
+  border-radius: 20px;
+  display: block;
+
+  position: relative;
+  top: 5px;
+  left: -1px;
+}
+.search-toggle .icon-container span:last-child {
+  top: -5px;
+  left: 16px;
+  width: 10px;
+
+  @include rotate(0deg);
+}
+
+.searching .search-toggle .icon-container span {
+  height: 3px;
+  width: 26px;
+  background: var(--white);
+  border: 0px solid var(--clear);
+  display: block;
+
+  position: relative;
+  top: 12px;
+  left: 0px;
+
+  @include rotate(90deg);
+}
+
+.searching .search-toggle .icon-container span:last-child {
   top: 9px;
   left: 0px;
 
   @include rotate(0deg);
 }
-.searching .close-container span:first-child {
-  background: transparent;
-  border: 3px solid white;
-  height: 12px;
-  width: 12px;
-  border-radius: 20px;
-  top: 5px;
-  left: -1px;
-}
-.searching .close-container span:last-child {
-  top: -5px;
-  left: 16px;
-  width: 10px;
-}
+
 
 
 
@@ -525,13 +599,13 @@ main.page-content {
   // height: calc(100% - 85px);
 }
 
-.open-nav main,
+.open-settings main,
 .searching main{
   filter: blur(3px);
 }
 // No Blur on FF — gets glitchy
 @-moz-document url-prefix() {
-  .open-nav main,
+  .open-settings main,
   .searching main {
     filter: blur(0px);
   }
@@ -794,7 +868,7 @@ a.post-link:hover .double-arrow svg {
 .night-mode .overlay-mask {
   background: var(--ultrablack-op-25);
 }
-.open-nav .overlay-mask,
+.open-settings .overlay-mask,
 .searching .overlay-mask,
 .open-notification .overlay-mask {
   opacity: 1;
@@ -955,7 +1029,7 @@ a.post-link:hover .double-arrow svg {
 
   @media (min-width: 720px) {
     flex-direction: row;
-    align-items: flex-start;
+    // align-items: flex-start;
     padding: 25px 25px 0;
   }
   @media (min-width: 860px) {
