adding nm-specific search json to filter correct search results based on theme

--- a/_layouts/nm/nm-default.html
+++ b/_layouts/nm/nm-default.html
@@ -23,7 +23,7 @@
 
     <div class="overlay-mask" id="overlay-mask"></div>
 
-    {%- include footer.html -%}
+    {%- include nm/nm-footer.html -%}
   </body>
 
 </html>
