--- a/_layouts/nm/nm-recipes.html
+++ b/_layouts/nm/nm-recipes.html
@@ -20,11 +20,11 @@
       {{ content }}
       <p class="footnote" id="footnote"></p>
     </main>
-    
+
     <div class="overlay-mask" id="overlay-mask"></div>
 
 
-    {%- include footer.html -%}
+    {%- include nm/nm-footer.html -%}
   </body>
 
 </html>
