updating nutrition facts layout and styles

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,10 +9,11 @@
   <script type="text/javascript" src="/scripts/libs/jquery_3.3.1.min.js"></script>
   <script type="text/javascript" src="/scripts/tldr.js"></script>
 {% endif %}
-<!-- {{jekyll.environment}} -->
 
 
+{% comment %}
 <!-- Simple Search Functionality — Thanks to: Christian Fei — Give the man (or woman) some love ———> https://github.com/christian-fei/Simple-Jekyll-Search -->
+{% endcomment %}
 <script type="text/javascript" src="/scripts/libs/search-library.min.js"></script>
 <script type="text/javascript">
   var sjs = SimpleJekyllSearch({
