--- a/_includes/nm/nm-scripts.html
+++ b/_includes/nm/nm-scripts.html
@@ -9,10 +9,10 @@
   <script type="text/javascript" src="/scripts/libs/jquery_3.3.1.min.js"></script>
   <script type="text/javascript" src="/scripts/tldr.js"></script>
 {% endif %}
-<!-- {{jekyll.environment}} -->
 
-<!-- nm-scripts -->
+{% comment %}
 <!-- Simple Search Functionality — Thanks to: Christian Fei — Give the man (or woman) some love ———> https://github.com/christian-fei/Simple-Jekyll-Search -->
+{% endcomment %}
 <script type="text/javascript" src="/scripts/libs/search-library.min.js"></script>
 <script type="text/javascript">
   var sjs = SimpleJekyllSearch({
