--- a/_sass/imports/_typo.scss
+++ b/_sass/imports/_typo.scss
@@ -33,12 +33,14 @@ strong {
 ul {
   padding: 0;
 }
+h1, h2, h3, h4 {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  text-transform: uppercase;
+}
 h1 {
   font-size: 54px;
-  line-height: 52px;
   font-weight: 900;
   color: var(--red);
-  text-transform: lowercase;
   display: inline;
 
   box-decoration-break: clone;
@@ -47,12 +49,12 @@ h1 {
   @include transition(color 150ms ease-in-out);
 
   @media (min-width: 720px) {
-    font-size: 68px;
-    line-height: 62px;
+    // font-size: 68px;
+    // line-height: 62px;
     // padding: 0px;
   }
   @media (min-width: 1200px) {
-    // font-size: 68px;
+    font-size: 66px;
   }
 }
 h2 {
@@ -61,7 +63,6 @@ h2 {
   margin: 0 0 10px;
   line-height: 44px;
   text-align: center;
-  text-transform: lowercase;
 
   @include transition(color 150ms ease-in-out);
 
@@ -333,40 +334,41 @@ a.post-link:hover h3,
 //
 // Post Styles
 //
-.recipe-page h1 {
-  font-size: 54px;
-  line-height: 52px;
 
-
-  @media (min-width: 860px) {
-    font-size: 68px;
-    line-height: 62px;
-  }
-  @media (min-width: 1200px) {
-  }
+.recipe-page h3 {
+  font-family: "Fira Sans", sans-serif;
+  font-weight: bold;
+  text-transform: unset;
+  color: var(--red);
 }
-
-
+.recipe-page h4 {
+  font-size: 24px;
+  margin-bottom: 5px;
+}
+.recipe-page h5 {
+  margin: 5px 0 0;
+  color: var(--red);
+  font-weight: 500;
+}
+.cal-container span {
+  font-size: 24px;
+}
 .nutrition-container span,
 .nutrition-container strong {
-  font-weight: 200;
+  font-weight: 500;
   color: var(--black);
 
   @include transition(color 150ms ease-in-out);
 }
 .nutrition-container strong {
-  font-weight: 200;
-  padding-top: 12px;
-
-  @include transition(color 150ms ease-in-out);
+  font-weight: 600;
 }
 .macro-container span {
-  font-size: 20px;
-  line-height: 18px;
-  font-weight: 600;
-  color: var(--red);
-
-  @include transition(color 150ms ease-in-out);
+  // font-size: 20px;
+  // font-weight: 500;
+  // color: var(--red);
+  //
+  // @include transition(color 150ms ease-in-out);
 }
 .copy-button {
   color: var(--white);
