--- a/assets/main.scss
+++ b/assets/main.scss
@@ -599,18 +599,6 @@ main.page-content {
   // height: calc(100% - 85px);
 }
 
-.open-settings main,
-.searching main{
-  filter: blur(3px);
-}
-// No Blur on FF — gets glitchy
-@-moz-document url-prefix() {
-  .open-settings main,
-  .searching main {
-    filter: blur(0px);
-  }
-}
-
 
 
 //
@@ -1162,27 +1150,45 @@ a.post-link:hover .double-arrow svg {
   }
 }
 .portion-container,
-.timing-container {
+.cal-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.portion-container {
+  border-top: 8px solid var(--black);
+}
+.portion-container,
+.cal-container {
+  padding: 10px 2px;
+  border-bottom: 1px solid var(--medgrey);
 }
 .macro-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  margin: 25px 0 15px;
-  padding-bottom: 15px;
-  border-bottom: 1px solid var(--grey);
-}
-.macro-container span {
-  padding: 0 30px 0 0;
-  margin: 10px 0;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+}
+.macro {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 10px 2px;
+  border-bottom: 1px solid var(--medgrey);
+  box-sizing: border-box;
+}
+.macro:nth-child(odd){
+  border-right: 1px solid var(--medgrey);
+  padding-right: 10px;
+}
+.macro:nth-child(even){
+  border-right: 0px solid var(--clear);
+  padding-left: 10px;
 }
 .recipe-content {
   // height: 100%;
