--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1159,6 +1159,9 @@ a.post-link:hover .double-arrow svg {
 .portion-container {
   border-top: 8px solid var(--black);
 }
+.per-serving-container {
+  margin-bottom: 20px;
+}
 .portion-container,
 .cal-container {
   padding: 10px 2px;
@@ -1189,6 +1192,34 @@ a.post-link:hover .double-arrow svg {
 .macro:nth-child(even){
   border-right: 0px solid var(--clear);
   padding-left: 10px;
+}
+.prep-time,
+.cook-time,
+.prep-time div,
+.cook-time div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+
+  padding: 8px 0;
+}
+.prep-time {
+  border-bottom: 1px solid var(--medgrey);
+}
+.prep-time div,
+.cook-time div {
+  padding: 0px 0;
+}
+.icon {
+  height: 20px;
+  width: 20px;
+  display: block;
+  margin-right: 5px;
+}
+.icon svg {
+  height: 20px;
+  width: 20px;
 }
 .recipe-content {
   // height: 100%;
