updating root path for nm header logo

--- a/_includes/nm/nm-header.html
+++ b/_includes/nm/nm-header.html
@@ -4,7 +4,7 @@
   {%- assign default_paths = site.pages | map: "path" -%}
   {%- assign page_paths = site.header_pages | default: default_paths -%}
 
-  <a class="site-title" rel="author" href="{{ "/nm" | relative_url }}" name="{{ site.title | escape }}">
+  <a class="site-title" rel="author" href="{{ "/nm/" | relative_url }}" name="{{ site.title | escape }}">
 
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
     	 viewBox="0 0 845 219" style="enable-background:new 0 0 845 219;" xml:space="preserve">
