--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -147,15 +147,15 @@ Assign Start / End Dates / Time Variables
       </div>
 
       <div class="nutrition-container">
-        <h4>Nutrition Facts:</h4>
+        <h4>Nutrition Facts</h4>
 
         <div class="portion-container">
-          <span>Serving Per Recipe: </span>
+          <span>Serving Per Recipe </span>
           <span><strong>{{ serving }} Servings</strong></span>
         </div>
 
         <div class="per-serving-container">
-          <h5>Amount per serving:</h5>
+          <h5>Amount per serving</h5>
 
           <div class="cal-container">
             <span>Calories </span>
