--- a/_sass/imports/_typo.scss
+++ b/_sass/imports/_typo.scss
@@ -28,7 +28,7 @@ em {
 b,
 strong {
   font-family: "Fira Sans", sans-serif;
-  font-weight: 500;
+  font-weight: 600;
 }
 ul {
   padding: 0;
@@ -81,7 +81,7 @@ h2 {
 h3 {
   font-size: 16px;
   margin: 10px 0 0;
-  font-weight: 500;
+  font-weight: 600;
 
   @include transition(color 150ms ease-in-out);
 
@@ -93,7 +93,7 @@ h3 {
   }
 }
 h4 {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
 }
 a {
@@ -344,18 +344,22 @@ a.post-link:hover h3,
 .recipe-page h4 {
   font-size: 24px;
   margin: 0px 0px 5px;
+
+  @include transition(all 150ms ease-in-out);
 }
 .recipe-page h5 {
   margin: 5px 0 0;
   color: var(--red);
-  font-weight: 500;
+  font-weight: 600;
+
+  @include transition(all 150ms ease-in-out);
 }
 .cal-container span {
   font-size: 24px;
 }
 .nutrition-container span,
 .nutrition-container strong {
-  font-weight: 500;
+  font-weight: 300;
   color: var(--black);
 
   @include transition(color 150ms ease-in-out);
@@ -372,12 +376,12 @@ a.post-link:hover h3,
 }
 .recipe-content li {
   // font-size: 500;
+  text-decoration-color: var(--clear);
 }
 .recipe-content li.toggled {
-  // font-size: 500;
   color: var(--darkgrey);
-  font-style: italic;
   text-decoration: line-through;
+  text-decoration-color: var(--darkgrey);
 }
 .date-time * {
   color: var(--black);
