recipe layout update

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -281,7 +281,7 @@ Assign Start / End Dates / Time Variables
                   <span class="list-toggle">
                     <span></span>
                   </span>
-                  {{ingredient.name}} + {{ingredient.amount}}
+                  {{ingredient.amount}} {{ingredient.name}}
                 </li>
               {%- endfor -%}
             </ul>
@@ -296,7 +296,7 @@ Assign Start / End Dates / Time Variables
                   <span class="list-toggle">
                     <span></span>
                   </span>
-                  {{seasoning.name}} + {{seasoning.amount}}
+                  {{seasoning.amount}} {{seasoning.name}}
                 </li>
               {%- endfor -%}
             </ul>
