minor style enhancements to hover interactions

--- a/_sass/imports/_colors.scss
+++ b/_sass/imports/_colors.scss
@@ -14,7 +14,9 @@
   --true-black: #000000;
 
   --red: #FF1744;
+  --red-hover: #D81645;
   --aqua: #1DE9B6;
+  --aqua-hover: #00BFA5;
   --darkblue: #311B92;
   --yellow: #ffff00;
   --gold: #FFD54F;
