added disclaimer for recipe macros

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -147,7 +147,19 @@ Assign Start / End Dates / Time Variables
       </div>
 
       <div class="nutrition-container">
-        <h4>Nutrition Facts</h4>
+
+        <div class="nutrition-header">
+          <h4>Nutrition Facts</h4>
+
+          <div class="more-info" id="more-info">
+            <span class="info-marker">?</span>
+          </div>
+
+          <div class="info-message" id="info-message">
+            These nutrition facts are, at best, approiximations based on <a href="https://www.myfitnesspal.com/food/search" target="_blank">MFP data</a>. At worst, they're completely wrong.
+          </div>
+        </div>
+
 
         <div class="portion-container">
           <span>Serving Per Recipe </span>
