--- a/_sass/imports/_night-mode.scss
+++ b/_sass/imports/_night-mode.scss
@@ -127,6 +127,34 @@ body.night-mode {
   .recipe-page h5 {
     color: var(--aqua);
   }
+  .more-info {
+    border: 2px solid var(--white);
+
+    > span {
+      color: var(--white);
+    }
+
+    &:hover {
+      border: 2px solid var(--aqua);
+
+      > span {
+        color: var(--aqua);
+      }
+    }
+  }
+  .info-message {
+    background: var(--ultrablack);
+    box-shadow: 0px 0px 5px var(--ultrablack-op-25);
+    color: var(--white);
+
+    a {
+      color: var(--white);
+
+      &:hover {
+        color: var(--aqua);
+      }
+    }
+  }
   .portion-container {
     border-top: 8px solid var(--white);
   }
