--- a/_sass/imports/_typo.scss
+++ b/_sass/imports/_typo.scss
@@ -343,7 +343,8 @@ a.post-link:hover h3,
 }
 .recipe-page h4 {
   font-size: 24px;
-  margin: 0px 0px 5px;
+  margin: 0px;
+  display: inline-block;
 
   @include transition(all 150ms ease-in-out);
 }
@@ -354,8 +355,13 @@ a.post-link:hover h3,
 
   @include transition(all 150ms ease-in-out);
 }
-.cal-container span {
-  font-size: 24px;
+.nutrition-container .cal-container span,
+.nutrition-container .cal-container strong {
+  font-size: 18px;
+
+  @media (min-width: 480px) {
+    font-size: 24px;
+  }
 }
 .nutrition-container span,
 .nutrition-container strong {
