--- a/assets/main.scss
+++ b/assets/main.scss
@@ -876,9 +876,10 @@ a.post-link:hover .double-arrow svg {
   -webkit-transform: translate3d(0px, 0px, 0px);
   top: -45px;
   left: 10px;
+
   width: calc(100% - 20px);
   height: auto;
-  padding: 25px 30px;
+  padding: 10px 15px;
   opacity: 0;
   box-sizing: border-box;
   border-radius: 5px;
@@ -886,26 +887,24 @@ a.post-link:hover .double-arrow svg {
   pointer-events: none;
 
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
 
 
-  @include transition(all 300ms ease-in-out);
-  @include transition-delay(100ms);
+  @include transition(all 150ms ease-in-out);
   @include box-shadow(0px 2px 5px var(--black-op-25));
-
 }
 .open-notification .notification-banner {
-  transform: translate3d(0px, 55px, 0px);
-  -webkit-transform: translate3d(0px, 55px, 0px);
+  transform: translate3d(0px, 100px, 0px);
+  -webkit-transform: translate3d(0px, 100px, 0px);
   opacity: 1;
   pointer-events: all;
 }
 .close-button-trigger {
   position: absolute;
   height: 100%;
-  width: 60px;
+  width: 45px;
   background: var(--clear);
   right: 0;
   top: 0;
@@ -939,28 +938,28 @@ a.post-link:hover .double-arrow svg {
 .close-button span:last-child {
   @include rotate(90deg);
 }
-.twemoji-holster {
+.emoji-holster {
   height: 50px;
   width: 50px;
-  margin: 20px 0 35px;
-  opacity: 0;
+  display: block;
+  margin: 0px 20px 0px 0;
 
-  @include rotate(-30deg);
-  @include transition(all 300ms ease-in-out);
-  @include transition-delay(100ms);
+  font-size: 30px;
+
+  @include transition(all 150ms ease-in-out);
 }
-.open-notification .twemoji-holster {
+.open-notification .emoji-holster {
   @include rotate(0deg);
   opacity: 1;
 }
-.twemoji-holster svg {
+.emoji-holster svg {
   height: 50px;
   width: 50px;
   @include transform(-20px, -45px, 0);
   @include transition(all 300ms ease-in-out);
   @include transition-delay(100ms);
 }
-.open-notification .twemoji-holster svg {
+.open-notification .emoji-holster svg {
   @include transform(0, 0, 0);
 }
 
@@ -1126,7 +1125,7 @@ a.post-link:hover .double-arrow svg {
     position: relative;
   }
 }
-.twemoji {
+.emoji {
   display: flex;
   flex-direction: column;
   justify-content: center;
