--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ Assign Start / End Dates / Time Variables
     </div>
   </div>
   <span class="emoji-holster">&#x1f44d;</span>
-  <span class="notification-message" id="copy-notification">Sweet. You copied that like a pro. Go paste it somewhere.</span>
+  <span class="notification-message" id="copy-notification">Sweet. You copied that like a pro. Now go paste it somewhere.</span>
 </div>
 
 
