--- a/assets/main.scss
+++ b/assets/main.scss
@@ -74,10 +74,12 @@ input {
   }
 }
 .button {
-  background: var(--yellow);
+  background: var(--red);
   padding: 12px;
   border-radius: 3px;
   display: block;
+
+  @include transition(all 125ms ease-in-out);
 }
 .button:hover {
   background: var(--red);
@@ -296,7 +298,70 @@ nav.site-nav {
   cursor: pointer;
   width: 180px;
   padding: 5px 0;
+
+  &.disabled {
+    opacity: 0.33;
+    pointer-events: none;
+  }
+
+  &.button {
+    justify-content: flex-start;
+    padding: 10px 15px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+
+    span {
+      text-transform: none;
+    }
+  }
+  &#nm-trigger {
+    background: var(--black);
+
+    .night-copy {
+      display: block;
+      opacity: 1;
+    }
+    .day-copy {
+      display: none;
+      opacity: 0;
+    }
+
+    &:hover {
+      background: var(--ultrablack);
+    }
+    span {
+      color: var(--white);
+    }
+  }
 }
+
+.setting .icon {
+  margin-right: 10px;
+  position: relative;
+}
+#nm-trigger .icon svg {
+  fill: var(--white);
+
+  &.moon {
+    position: absolute;
+    opacity: 1;
+    left: 0;
+
+    @include transition(all 125ms ease-in-out);
+    @include rotate(0deg);
+  }
+  &.sun {
+    position: absolute;
+    opacity: 0;
+    left: 0;
+
+    @include transition(all 125ms ease-in-out);
+    @include rotate(180deg);
+  }
+}
+
+// Maybe Old code...
 .toggle-container {
   height: 20px;
   width: 40px;
@@ -894,6 +959,10 @@ a.post-link:hover .double-arrow svg {
 
   @include transition(all 150ms ease-in-out);
   @include box-shadow(0px 2px 5px var(--black-op-25));
+
+  @media (min-width: 480px) {
+    justify-content: flex-start;
+  }
 }
 .open-notification .notification-banner {
   transform: translate3d(0px, 100px, 0px);
@@ -920,10 +989,6 @@ a.post-link:hover .double-arrow svg {
   width: 20px;
   position: relative;
 
-  @include rotate(180deg);
-  @include transition(all 450ms ease-in-out);
-}
-.open-notification .close-button {
   @include rotate(45deg);
 }
 .close-button span {
@@ -940,13 +1005,14 @@ a.post-link:hover .double-arrow svg {
 }
 .emoji-holster {
   height: 50px;
-  width: 50px;
+  width: 36px;
   display: block;
   margin: 0px 20px 0px 0;
 
   font-size: 30px;
 
-  @include transition(all 150ms ease-in-out);
+  @include transition(all 175ms ease-in-out);
+  @include rotate(-180deg);
 }
 .open-notification .emoji-holster {
   @include rotate(0deg);
