updating styles. removing old assets. added og imges / meta description for index and nm index

--- a/_sass/imports/_night-mode.scss
+++ b/_sass/imports/_night-mode.scss
@@ -78,6 +78,9 @@ body.night-mode {
       background: var(--ultrablack);
     }
   }
+  .overlay-mask {
+    background: var(--true-black-op-75);
+  }
   .search-toggle:hover {
     background: var(--aqua-hover);
   }
