--- a/_sass/imports/_colors.scss
+++ b/_sass/imports/_colors.scss
@@ -25,4 +25,7 @@
   --black-op-25: rgba(38, 50, 58, 0.25);
 
   --ultrablack-op-25: rgba(21, 27, 29, 0.25);
+  --ultrablack-op-75: rgba(21, 27, 29, 0.75);
+
+  --true-black-op-75: rgba(0, 0, 0, 0.75);
 }
