messing around with filter / toggle styles and layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,7 @@ layout: default
       <div class="filter-container">
 
         <div class="toggles" id="toggle-list">
+          <h5>Filter</h5>
           <span id="alpha-toggle" class="active-filter">alpha</span>
           <span id="new-toggle">latest</span>
 
