--- a/_layouts/nm/nm-home.html
+++ b/_layouts/nm/nm-home.html
@@ -14,16 +14,15 @@ layout: nm/nm-default
       <div class="filter-container">
 
         <div class="toggles" id="toggle-list">
+          <h5>Filter</h5>
           <span id="alpha-toggle" class="active-filter">alpha</span>
           <span id="new-toggle">latest</span>
 
           {% for tag in site.tags %}
-
             <span id="{{tag[0] | replace: " ", "-" }}-toggle">{{ tag[0] }}</span>
-
           {% endfor %}
-
         </div>
+
         <div class="highlight"></div>
       </div>
 
