--- a/_sass/imports/_night-mode.scss
+++ b/_sass/imports/_night-mode.scss
@@ -71,6 +71,9 @@ body.night-mode {
   .highlight {
     background: var(--aqua);
   }
+  .toggles h5 {
+    color: var(--medblack);
+  }
   .search-toggle {
     background: var(--aqua);
 
