--- a/_layouts/nm/nm-default.html
+++ b/_layouts/nm/nm-default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+  {%- include nm/nm-head.html -%}
 
   <body class="night-mode">
     <!-- Google Tag Manager (noscript) -->
