--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1311,6 +1311,9 @@ a.post-link:hover .double-arrow svg {
   @media (min-width: 720px) {
     width: 320px;
   }
+  @media (min-width: 1200px) {
+    width: 480px;
+  }
 }
 .open-message .info-message {
   top: 50px;
